<resources>
    <string name="app_name">HealthWiz</string>
    <string name="health_info_title">Enter Health Information Here</string>
    <string name="blood_group_prompt">Choose your blood group</string>
    <string name="update_button_string">Update</string>
    <string name="conditions_string">Conditions</string>
    <string name="alergies_string">Alergies</string>
    <string name="set_date_string">Set Date</string>
    <string name="date_of_birth_string">Date of Birth</string>
    <string name="emergency_contact_string">Emergency Contact</string>
    <string name="organ_donor_string">Organ Donor</string>
    <string name="blood_group_string">Blood Group</string>
    <string name="name_string">Name</string>
    <string name="emergency_health_information">Emergency Health Information</string>
    <string name="notification_logo_for_healthwiz_app">Notification Logo for HealthWiz App</string>
    <string name="test_string">Test</string>
    <string name="emergency_conditions_test">Emergency Conditions (Test)</string>
    <string name="time_to_reach_nearest_hospital">Time to nearest hospital</string>
    <string name="light">Light</string>
    <string name="barometric_pressure">Barometric Pressure</string>
    <string name="fall">Fall</string>

    <string-array name="blood_group_array">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
