<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vickykatara.healthwiz.TestingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emergency_conditions_test"
        android:id="@+id/testingTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/testingTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:dividerPadding="5px"
        android:paddingStart="10px"
        android:layout_alignParentEnd="false"
        android:padding="5px"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/time_to_reach_nearest_hospital"
                android:id="@+id/textView10"
                android:layout_column="0" />

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Mock"
                android:id="@+id/timeToHospitalSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal"
                android:showText="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/timeToHospitalTextView"
                android:layout_column="0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/light"
                android:id="@+id/textView11"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mock"
                android:id="@+id/lightSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/lightTextView"
                android:layout_column="0" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/barometric_pressure"
                android:id="@+id/textView12"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mock"
                android:id="@+id/pressureSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/pressureTextView"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:text="            "
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fall"
                android:id="@+id/textView13"
                android:layout_column="0" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mock"
                android:id="@+id/fallSwitch"
                android:layout_column="2"
                android:checked="false"
                android:layout_gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/fallTextView"
                android:layout_column="0" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
